--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand fs-3" href="#">
                     <!-- logo -->
                     <!-- <img class="cc-logo" src="img.png" width="55"> -->
-                    Restaurant Management System
+                    Pegasus Chains of Hotels And Restaurant
                     <div class="cc-font"></div>
                 </a>
             </div>
@@ -66,15 +66,12 @@
                 <div class="col-lg-6 text-white">
                     <h2>Welcome</h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
-                        delectus officiis aut culpa pariatur et molestiae, minima nostrum
-                        debitis? dolores et quas molestias excepturi sint occaecati
-                        cupiditate non provident, similique sunt in culpa qui officia
-                        deserunt mollitia animi, id est laborum et dolorum fuga. Et harum
-                        quidem rerum facilis est et expedita distinctio.
+                        We here at the Pegasus Chains of Hotels and Restaurant welcomes you
+                        to the total delightness of Pegasus. We currently stand at the No.1 
+                        position of Chains of Hotels providing our facilities to over 20+ countries.
                     </p>
 
-                    <a href="#" class="btn btn-lg btn-danger text-white my-1">About Us</a>
+                    <a href="#" class="btn btn-lg btn-danger text-white my-1">See Our Menu</a>
                 </div>
 
                 <div class="col-lg-6 mb-sm-30">
