--- a/main.html
+++ b/main.html
@@ -72,6 +72,8 @@
                     </p>
 
                     <a href="#" class="btn btn-lg btn-danger text-white my-1">See Our Menu</a>
+                    <a href="#" class="btn btn-lg btn-danger text-white my-1">Book a Table</a>
+                    
                 </div>
 
                 <div class="col-lg-6 mb-sm-30">
