--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                     </li>
                     <li class="nav-item px-5">
                         <!-- navbar item #2 -->
-                        <a class="nav-link fs-5" href="#" style="font-weight: 600">Services</a>
+                        <a class="nav-link fs-5" href="services.html" style="font-weight: 600">Services</a>
                     </li>
                     <li class="nav-item px-5">
                         <!-- navbar item #3 -->
@@ -49,7 +49,7 @@
                     </li>
                     <li class="nav-item px-5">
                         <!-- navbar item #4 -->
-                        <a class="nav-link fs-5" href="#" style="font-weight: 600">Contact Us</a>
+                        <a class="nav-link fs-5" href="contact.html" style="font-weight: 600">Contact Us</a>
                     </li>
                 </ul>
             </div>
