--- a/services.html
+++ b/services.html
@@ -7,19 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOTEL PEGASES</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+
+    <script src="./JS/main.js"></script>
     <!-- bootstrap icons -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.0/font/bootstrap-icons.min.css"
         integrity="sha512-H4E1ASW8Ru1Npd1wQPB7JClskV8Nv1FG/bXK6TWMD+U9YMlR+VWUZp7SaIbBVBV/iRtefsIsv9dLSN6fdUI36w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-        <link rel="stylesheet" href="./css/style.css">
-        <script src="./JS/main.js"></script>
+
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./JS/main.js"></script>
 </head>
 
 <body style="height: 100%; width: 100%">
@@ -44,7 +48,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item px-4">
                         <!-- navbar item #1 -->
-                        <a class="nav-link fs-5" href="#" style="font-weight: 600">Home</a>
+                        <a class="nav-link fs-5" href="main.html" style="font-weight: 600">Home</a>
                     </li>
                     <li class="nav-item px-4">
                         <!-- navbar item #2 -->
@@ -63,7 +67,7 @@
         </div>
     </nav>
 
-  
+
 
 
     <!-- services section -->
@@ -147,34 +151,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-
-    <section id="section-contact" class="py-5" style="
-    background-color: black;
-  ">
-        <div class="container" style="background-size: cover">
-            <div class="row align-items-center" style="background-size: cover">
-
-                <div class="col-md-6 text-white" style="background-size: cover;">
-                    <div class="fs-3">Contact Us</div>
-                </div>
-
-                <div class="col-md-3 text-white " style="background-size: cover;">
-                    <div class="social-icons" style="background-size: cover;">
-                        <a href="#"><i class="bi-facebook" style="font-size: xx-large;"></i></a>
-                        <a href="#"><i class="bi-instagram" style="font-size: xx-large; color:  #E1306C;"></i></a>
-                        <a href="#"><i class="bi-linkedin" style="font-size: xx-large; color: #0e76a8;"></i></a>
-                        <a href="#"><i class="bi bi-youtube" style="font-size: xx-large; color: #FF0000;"></i></a>
-                        <a href="#"><i class="bi bi-pinterest" style="font-size: xx-large; color: #FF0000;"></i></a>
-                        <a href="#"><i class="bi bi-twitter" style="font-size: xx-large; color: #FF0000;"></i></a>
-
-
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
 </body>
