--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
                     </p>
 
                     <a href="#" class="btn btn-lg btn-danger text-white my-1">See Our Menu</a>
-                    <a href="#" class="btn btn-lg btn-danger text-white my-1">Book a Table</a>
+                    <a href="BookTable.html" class="btn btn-lg btn-danger text-white my-1">Book a Table</a>
                     
                 </div>
 
