--- a/services.html
+++ b/services.html
@@ -1,13 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" style="height: 100%; width: 100%">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>services</title>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Services</title>
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+
+    <script src="./JS/main.js"></script>
+    <!-- bootstrap icons -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.0/font/bootstrap-icons.min.css"
+        integrity="sha512-H4E1ASW8Ru1Npd1wQPB7JClskV8Nv1FG/bXK6TWMD+U9YMlR+VWUZp7SaIbBVBV/iRtefsIsv9dLSN6fdUI36w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./JS/main.js"></script>
 </head>
-<body>
-    <h1>SERVICES</h1>
-    
+<body style="height: 100%; width: 100%">
+    <!-- Navbar -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark" id="navBar"
+        style="scroll-behavior: smooth; transition: 1s">
+        <div class="container-fluid">
+            <div style="height: 60px">
+                <a class="navbar-brand fs-3" href="#">
+                    <!-- logo -->
+                    <!-- <img class="cc-logo" src="img.png" width="55"> -->
+                    Pegasus Chains of Hotels And Restaurant
+                    <div class="cc-font"></div>
+                </a>
+            </div>
+            <!-- tongle btn for navbar on small viewport -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item px-4">
+                        <!-- navbar item #1 -->
+                        <a class="nav-link fs-5" href="main.html" style="font-weight: 600">Home</a>
+                    </li>
+                    <li class="nav-item px-4">
+                        <!-- navbar item #2 -->
+                        <a class="nav-link fs-5" href="#section-services" style="font-weight: 600">Services</a>
+                    </li>
+                    <li class="nav-item px-4">
+                        <!-- navbar item #3 -->
+                        <a class="nav-link fs-5" href="#" style="font-weight: 600">About Us</a>
+                    </li>
+                    <li class="nav-item px-4">
+                        <!-- navbar item #4 -->
+                        <a class="nav-link fs-5" href="#section-contact" style="font-weight: 600">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
+    <!-- services section -->
+    <section id="section-services" class="py-5 row h-100" style="
+        background: url('https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm251-aum-13-g.jpg?w=1200&h=1200&dpr=1&fit=clip&crop=default&fm=jpg&q=75&vib=3&con=3&usm=15&cs=srgb&bg=F4F4F3&ixlib=js-2.2.1&s=fbcd0cdb80b3342ce32a17174f6c2024')
+          0% 0% / cover no-repeat fixed;
+      ">
+        <!-- <div class="wm wm-border dark wow fadeInDown  animated" style="visibility: visible; animation-name: fadeInDown; background-size: cover;">features</div> -->
+        <div class="row text-white px-5" style="background-size: cover">
+            <div class="row col-12 my-auto px-5" style="background-size: cover;">
+                <div class="col-12 text-center my-5">
+                    <h1>Our Services</h1>
+                </div>
+
+                <div class="col-4">
+                    <div class="text" style="background-size: cover">
+                        <h3><span>Breakfast</span></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                            delectus officiis aut culpa pariatur et molestiae, minima
+                            nostrum debitis?
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="text" style="background-size: cover">
+                        <h3><span>Room Service</span></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                            delectus officiis aut culpa pariatur et molestiae, minima
+                            nostrum debitis?
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="text" style="background-size: cover">
+                        <h3><span>Free Parking</span></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                            delectus officiis aut culpa pariatur et molestiae, minima
+                            nostrum debitis?
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="text" style="background-size: cover">
+                        <h3><span>Internet Access</span></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                            delectus officiis aut culpa pariatur et molestiae, minima
+                            nostrum debitis?
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="text" style="background-size: cover">
+                        <h3><span>Business Centre</span></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                            delectus officiis aut culpa pariatur et molestiae, minima
+                            nostrum debitis?
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="text" style="background-size: cover">
+                        <h3><span>Parties</span></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+                            delectus officiis aut culpa pariatur et molestiae, minima
+                            nostrum debitis?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
 </body>
-</html>
+
+</html> 
+    
