--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
                         position of Chains of Hotels providing our facilities to over 20+ countries.
                     </p>
 
-                    <a href="#" class="btn btn-lg btn-danger text-white my-1">See Our Menu</a>
+                    <a href="menu.html" class="btn btn-lg btn-danger text-white my-1">See Our Menu</a>
                     <a href="BookTable.html" class="btn btn-lg btn-danger text-white my-1">Book a Table</a>
                     
                 </div>
