--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar sticky-bottom navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Pegasus Chains of Hotels And Restaurant</a>
+            <a class="navbar-brand" href="#">Pegasus Chain of Hotels And Restaurant</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
