Added AboutUS page

--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
                     </li>
                     <li class="nav-item px-5">
                         <!-- navbar item #3 -->
-                        <a class="nav-link fs-5" href="#" style="font-weight: 600">About Us</a>
+                        <a class="nav-link fs-5" href="About_us.html" style="font-weight: 600">About Us</a>
                     </li>
                     <li class="nav-item px-5">
                         <!-- navbar item #4 -->
