Modifies services.html

--- a/services.html
+++ b/services.html
@@ -57,11 +57,11 @@
                     </li>
                     <li class="nav-item px-4">
                         <!-- navbar item #3 -->
-                        <a class="nav-link fs-5" href="#" style="font-weight: 600">About Us</a>
+                        <a class="nav-link fs-5" href="About_us.html" style="font-weight: 600">About Us</a>
                     </li>
                     <li class="nav-item px-4">
                         <!-- navbar item #4 -->
-                        <a class="nav-link fs-5" href="#section-contact" style="font-weight: 600">Contact Us</a>
+                        <a class="nav-link fs-5" href="contact.html" style="font-weight: 600">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -86,10 +86,14 @@
                 <div class="col-4">
                     <div class="text" style="background-size: cover">
                         <h3><span>Breakfast</span></h3>
+                        <img src="./resources/breakfast.jpg" width="300" height="200">
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
-                            delectus officiis aut culpa pariatur et molestiae, minima
-                            nostrum debitis?
+                            <ul><li>Avocado Toast</li>
+                                <li>Home Fries</li>
+                                <li>French Toast</li>
+                                <h7>... and many more</h7> 
+                            </ul>
+                            
                         </p>
                     </div>
                 </div>
@@ -97,10 +101,9 @@
                 <div class="col-4">
                     <div class="text" style="background-size: cover">
                         <h3><span>Room Service</span></h3>
+                        <img src="./resources/room_service.jpg" width="300" height="200">
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
-                            delectus officiis aut culpa pariatur et molestiae, minima
-                            nostrum debitis?
+                            Room services available from 8 AM - 8 PM
                         </p>
                     </div>
                 </div>
@@ -108,10 +111,9 @@
                 <div class="col-4">
                     <div class="text" style="background-size: cover">
                         <h3><span>Free Parking</span></h3>
+                        <img src="./resources/car-parking.jpg" width="300" height="200">
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
-                            delectus officiis aut culpa pariatur et molestiae, minima
-                            nostrum debitis?
+                            Spacious parking lot with a capacity of parking over 500 4 wheelers and 200 two - wheelers
                         </p>
                     </div>
                 </div>
@@ -119,6 +121,7 @@
                 <div class="col-4">
                     <div class="text" style="background-size: cover">
                         <h3><span>Internet Access</span></h3>
+                        <img src="./resources/wifi.jpg" width="300" height="200">
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
                             delectus officiis aut culpa pariatur et molestiae, minima
@@ -130,6 +133,7 @@
                 <div class="col-4">
                     <div class="text" style="background-size: cover">
                         <h3><span>Business Centre</span></h3>
+                        <img src="./resources/business.jpg" width="300" height="200">
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
                             delectus officiis aut culpa pariatur et molestiae, minima
@@ -141,6 +145,7 @@
                 <div class="col-4">
                     <div class="text" style="background-size: cover">
                         <h3><span>Parties</span></h3>
+                        <img src="./resources/parties.png" width="300" height="200">
                         <p>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
                             delectus officiis aut culpa pariatur et molestiae, minima
