--- a/BookTable.html
+++ b/BookTable.html
@@ -1,51 +1,119 @@
-<form method="post" action="//submit.form" onSubmit="return validateForm();">
-    <div style="max-width: 400px;">
-    </div>
-    <div style="padding-bottom: 18px;font-size : 24px;">Table Reservation</div>
-    <div style="padding-bottom: 18px;font-size : 18px;">We would be glad to reserve a table for you at our restaurant!</div>
-    <div style="padding-bottom: 18px;">Name<span style="color: red;"> *</span><br/>
-    <input type="text" id="data_3" name="data_3" style="max-width : 400px;" class="form-control"/>
-    </div>
-    <div style="padding-bottom: 18px;">Phone<br/>
-    <input type="text" id="data_4" name="data_4" style="max-width : 400px;" class="form-control"/>
-    </div>
-    <div style="padding-bottom: 18px;">Email<br/>
-    <input type="text" id="data_5" name="data_5" style="max-width : 400px;" class="form-control"/>
-    </div>
-    <div style="padding-bottom: 18px;">Date<span style="color: red;"> *</span><br/>
-    <input type="text" id="data_6" name="data_6" style="max-width : 250px;" class="form-control"/>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript">new Pikaday({ field: document.getElementById('data_6') });</script>
-    <div style="padding-bottom: 18px;">Time<span style="color: red;"> *</span><br/>
-    <input type="text" id="data_7" name="data_7" style="max-width : 250px;" class="form-control"/>
-    </div>
-    <div style="padding-bottom: 18px;">Number of Attendees<span style="color: red;"> *</span><br/>
-    <select id="data_8" name="data_8" style="max-width : 250px;" class="form-control"><option>1</option>
-    <option>2</option>
-    <option>3</option>
-    <option>4</option>
-    <option>5</option>
-    <option>6</option>
-    <option>7</option>
-    <option>8</option>
-    <option>9</option>
-    <option>10</option>
-    <option>10+ (Specify in Comments)</option>
-    </select>
-    </div>
-    <div style="padding-bottom: 18px;">Comments / Additional Requests<br/>
-    <textarea id="data_9" false name="data_9" style="max-width : 400px;" rows="6" class="form-control"></textarea>
-    </div>
-    <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Submit" type="submit"/></div>
-    <div>
-    <div style="float:right"><a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
-    <script src="https://www.100forms.com/js/FORMKEY:PQQWUEZCQCQW/SEND:harshal3558@gmail.com" type="text/javascript"></script>
-    </div>
-    </form>
-    
-    <script type="text/javascript">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Table</title>
+
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+
+    <script src="./JS/main.js"></script>
+</head>
+
+<body>
+
+    <!-- Navbar -->
+    <nav class="navbar sticky-bottom navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Pegasus Chains of Hotels And Restaurant</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item px-5">
+                        <!-- navbar item #1 -->
+                        <a class="nav-link fs-5" href="main.html" style="font-weight: 600">Home</a>
+                    </li>
+                    <li class="nav-item px-5">
+                        <!-- navbar item #2 -->
+                        <a class="nav-link fs-5" href="services.html" style="font-weight: 600">Services</a>
+                    </li>
+                    <li class="nav-item px-5">
+                        <!-- navbar item #3 -->
+                        <a class="nav-link fs-5" href="#" style="font-weight: 600">About Us</a>
+                    </li>
+                    <li class="nav-item px-5">
+                        <!-- navbar item #4 -->
+                        <a class="nav-link fs-5" href="contact.html" style="font-weight: 600">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="container">
+
+        <form method="post" action="//submit.form" onSubmit="return validateForm();">
+            <div style="max-width: 400px;">
+            </div>
+            <div style="padding-bottom: 18px;font-size : 24px;">Table Reservation</div>
+            <div style="padding-bottom: 18px;font-size : 18px;">We would be glad to reserve a table for you at our
+                restaurant!
+            </div>
+            <div style="padding-bottom: 18px;">Name<span style="color: red;"> *</span><br />
+                <input type="text" id="data_3" name="data_3" style="max-width : 400px;" class="form-control" />
+            </div>
+            <div style="padding-bottom: 18px;">Phone<br />
+                <input type="text" id="data_4" name="data_4" style="max-width : 400px;" class="form-control" />
+            </div>
+            <div style="padding-bottom: 18px;">Email<br />
+                <input type="text" id="data_5" name="data_5" style="max-width : 400px;" class="form-control" />
+            </div>
+            <div style="padding-bottom: 18px;">Date<span style="color: red;"> *</span><br />
+                <input type="text" id="data_6" name="data_6" style="max-width : 250px;" class="form-control" />
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js"
+                type="text/javascript"></script>
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet"
+                type="text/css" />
+            <script type="text/javascript">new Pikaday({ field: document.getElementById('data_6') });</script>
+            <div style="padding-bottom: 18px;">Time<span style="color: red;"> *</span><br />
+                <input type="text" id="data_7" name="data_7" style="max-width : 250px;" class="form-control" />
+            </div>
+            <div style="padding-bottom: 18px;">Number of Attendees<span style="color: red;"> *</span><br />
+                <select id="data_8" name="data_8" style="max-width : 250px;" class="form-control">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    <option>10+ (Specify in Comments)</option>
+                </select>
+            </div>
+            <div style="padding-bottom: 18px;">Comments / Additional Requests<br />
+                <textarea id="data_9" false name="data_9" style="max-width : 400px;" rows="6"
+                    class="form-control"></textarea>
+            </div>
+            <div style="padding-bottom: 18px;"><input name="skip_Submit" value="Submit" type="submit" /></div>
+            <div>
+                <div style="float:right"><a href="https://www.100forms.com" id="lnk100" title="form to email">form to
+                        email</a>
+                </div>
+                <script src="https://www.100forms.com/js/FORMKEY:PQQWUEZCQCQW/SEND:harshal3558@gmail.com"
+                    type="text/javascript"></script>
+            </div>
+        </form>
+    </section>
+
+</body>
+
+<script type="text/javascript">
     function validateForm() {
     if (isEmpty(document.getElementById('data_3').value.trim())) {
     alert('Name is required!');
@@ -71,3 +139,4 @@
     return isEmpty(email) || re.test(email);
     }
     </script>
+    </html>
